記事表示できるようにした

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,9 @@
 ---
-import "@/styles/reset.css";
+import "aki-modules/reset.css";
 import "@/styles/var.css";
 
 interface Props {
-	title?: string;
+	title?: string | undefined;
 }
 
 const { title } = Astro.props;
