--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,13 @@
 ---
+import AccessCounter from "@/components/molecules/AccessCounter.astro";
 import "aki-modules/reset.css";
-import "@/styles/var.css";
 
 interface Props {
 	title?: string | undefined;
 }
 
 const { title } = Astro.props;
-const serviceTitle = "Aki Blog";
+const serviceTitle = "彩季のBlogです。";
 const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitle}`;
 ---
 
@@ -19,6 +19,40 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-		<slot />
+		<header class="header">
+			<a class="title-link" href="/"><h1 class="title">{serviceTitle}</h1></a>
+			<AccessCounter />
+		</header>
+		<main class="main">
+			<slot />
+		</main>
 	</body>
 </html>
+
+<style>
+	body {
+		padding: 10px;
+	}
+
+	.header {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.title-link {
+		color: inherit;
+		text-decoration: none;
+	}
+
+	.title-link:hover {
+		text-decoration: underline;
+	}
+
+	.title {
+		font-size: 32px;
+	}
+
+	.main {
+		padding: 30px 0;
+	}
+</style>
