--- a/src/pages/[blogId]/index.astro
+++ b/src/pages/[blogId]/index.astro
@@ -22,4 +22,40 @@ const blog = await getBlogDetail(blogId);
 
 <Layout title={blog.title}>
 	<Post post={blog} />
+	<p class="comment-note">匿名でコメントできるよ～↓（メアドはいるけど、適当で良いよ）</p>
+	<div id="disqus_thread"></div>
+
+	<script is:inline>
+		/**
+		 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+		 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+		/*
+		var disqus_config = function () {
+		this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+		this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+		};
+		*/
+		// prettier-ignore
+		(function() { // DON'T EDIT BELOW THIS LINE
+		var d = document, s = d.createElement('script');
+		s.src = 'https://aki-blog.disqus.com/embed.js';
+		s.setAttribute('data-timestamp', +new Date());
+		(d.head || d.body).appendChild(s);
+		})();
+	</script>
+
+	<noscript>
+		Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+	</noscript>
 </Layout>
+
+<style>
+	.comment-note {
+		margin-bottom: 10px;
+		font-weight: bold;
+	}
+
+	#disqus_thread {
+		max-width: 600px;
+	}
+</style>
