--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,21 +2,49 @@
 import Layout from "@/layouts/Layout.astro";
 import { getBlogs } from "@/lib/microcms";
 
-const posts = await getBlogs({ fields: ["id", "title"] });
+const posts = await getBlogs({ fields: ["id", "title", "publishedAt", "createdAt"] });
 ---
 
 <Layout>
-	{
-		posts.contents.map((post) => (
-			<a class="post-list" href={`/${post.id}`}>
-				{post.title}
-			</a>
-		))
-	}
+	<div class="post-list">
+		{
+			posts.contents.map((post) => {
+				const date = post.publishedAt !== undefined ? post.publishedAt : post.createdAt;
+
+				return (
+					<div class="post-wrap">
+						<time datetime={date}>{date}</time>
+						<h2>{post.title}</h2>
+						<a class="post-link" href={`/${post.id}`} />
+					</div>
+				);
+			})
+		}
+	</div>
 </Layout>
 
 <style>
 	.post-list {
+		display: flex;
+		gap: 20px;
+		flex-direction: column;
+	}
+
+	.post-wrap {
 		display: table;
+		position: relative;
+	}
+
+	.post-wrap:hover {
+		text-decoration: underline;
+	}
+
+	.post-link {
+		display: block;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 	}
 </style>
