--- a/src/components/molecules/AccessCounter.astro
+++ b/src/components/molecules/AccessCounter.astro
@@ -1,20 +1,4 @@
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td align="center">
-			<a href="http://www.rays-counter.com/">
-				<img src="http://www.rays-counter.com/d1269_f6_022/64ce5424e0319/" alt="アクセスカウンター" />
-			</a>
-		</td>
-	</tr>
-	<tr>
-		<td align="center">
-			<img src="http://www.rays-counter.com/images/counter_01.gif" /><img
-				src="http://www.rays-counter.com/images/counter_02.gif"
-			/>
-			<img src="http://www.rays-counter.com/images/counter_03.gif" /><img
-				src="http://www.rays-counter.com/images/counter_04.gif"
-			/>
-			<img src="http://www.rays-counter.com/images/counter_05.gif" /></td
-		>
-	</tr>
-</table>
+<!-- FC2カウンター ここから -->
+<script type="text/javascript" src="//counter1.fc2.com/counter.php?id=39203216&main=1" is:inline></script>
+<noscript><img src="//counter1.fc2.com/counter_img.php?id=39203216&main=1" /></noscript>
+<!-- FC2カウンター ここまで -->
