--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,7 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" href="/favicon.ico" />
 		<title>{pageTitle}</title>
 	</head>
 	<body>
