--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,22 +22,21 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 	<body>
 		<header class="header">
 			<a class="title-link" href="/"><h1 class="title">{serviceTitle}</h1></a>
-			<AccessCounter />
 		</header>
 		<main class="main">
 			<slot />
 		</main>
+		<footer class="footer">
+			<a href="http://twitter.com/AkimeAki" target="_blank">Twitter</a>
+			<a href="https://www.youtube.com/channel/UCHV3Taosn76pn9_ip1u7Zkg" target="_blank">YouTube</a>
+			<AccessCounter />
+		</footer>
 	</body>
 </html>
 
 <style>
 	body {
-		padding: 10px;
-	}
-
-	.header {
-		display: flex;
-		justify-content: space-between;
+		padding: 5px;
 	}
 
 	.title-link {
@@ -55,5 +54,12 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 
 	.main {
 		padding: 30px 0;
+	}
+
+	.footer {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+		align-items: start;
 	}
 </style>
