--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,6 +31,7 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 			<a href="https://www.youtube.com/channel/UCHV3Taosn76pn9_ip1u7Zkg" target="_blank">YouTube</a>
 			<AccessCounter />
 		</footer>
+		<img width="250" src="/face.png" alt="顔" />
 	</body>
 </html>
 
