リンク修正

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,7 +27,7 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 			<slot />
 		</main>
 		<footer class="footer">
-			<a href="http://twitter.com/AkimeAki" target="_blank">Twitter</a>
+			<a href="http://twitter.com/Akime_Aki" target="_blank">Twitter</a>
 			<a href="https://www.youtube.com/channel/UCHV3Taosn76pn9_ip1u7Zkg" target="_blank">YouTube</a>
 			<AccessCounter />
 		</footer>
