アドセンス追加

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,6 +18,11 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" href="/favicon.ico" />
 		<title>{pageTitle}</title>
+		<script
+			async
+			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6914867149724943"
+			crossorigin="anonymous"
+			is:inline></script>
 	</head>
 	<body>
 		<header class="header">
