--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,7 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6914867149724943"
 			crossorigin="anonymous"
 			is:inline></script>
+		<link rel="sitemap" href="/sitemap-index.xml" />
 	</head>
 	<body>
 		<header class="header">
