--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,5 @@
 ---
 import AccessCounter from "@/components/molecules/AccessCounter.astro";
-import GoogleTagManager from "@/components/molecules/GoogleTagManager.astro";
-import GoogleTagManagerNoScript from "@/components/molecules/GoogleTagManagerNoScript.astro";
 import "aki-modules/reset.css";
 
 interface Props {
@@ -16,10 +14,21 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 <!DOCTYPE html>
 <html lang="ja">
 	<head>
-
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<GoogleTagManager />
+		<meta name="description" content="彩季のブログです。" />
+		<meta name="format-detection" content="email=no,telephone=no,address=no" />
+		<meta name="author" content="彩季" />
+		<!-- Google Tag Manager -->
+		<script is:inline>
+			// prettier-ignore
+			(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+			})(window,document,'script','dataLayer','GTM-WQHBNHNL');
+		</script>
+		<!-- End Google Tag Manager -->
 		<link rel="icon" href="/favicon.ico" />
 		<title>{pageTitle}</title>
 		<script
@@ -30,7 +39,16 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 		<link rel="sitemap" href="/sitemap-index.xml" />
 	</head>
 	<body>
-		<GoogleTagManagerNoScript />
+		<!-- Google Tag Manager (noscript) -->
+		<noscript>
+			<iframe
+				src="https://www.googletagmanager.com/ns.html?id=GTM-WQHBNHNL"
+				height="0"
+				width="0"
+				style="display:none;visibility:hidden"></iframe>
+		</noscript>
+		<!-- End Google Tag Manager (noscript) -->
+
 		<header class="header">
 			<a class="title-link" href="/"><h1 class="title">{serviceTitle}</h1></a>
 		</header>
@@ -43,35 +61,34 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 			<AccessCounter />
 		</footer>
 		<img width="250" src="/face.png" alt="顔" />
+		<style>
+			body {
+				padding: 5px;
+			}
+
+			.title-link {
+				color: inherit;
+				text-decoration: none;
+			}
+
+			.title-link:hover {
+				text-decoration: underline;
+			}
+
+			.title {
+				font-size: 32px;
+			}
+
+			.main {
+				padding: 30px 0;
+			}
+
+			.footer {
+				display: flex;
+				flex-direction: column;
+				flex-wrap: wrap;
+				align-items: start;
+			}
+		</style>
 	</body>
 </html>
-
-<style>
-	body {
-		padding: 5px;
-	}
-
-	.title-link {
-		color: inherit;
-		text-decoration: none;
-	}
-
-	.title-link:hover {
-		text-decoration: underline;
-	}
-
-	.title {
-		font-size: 32px;
-	}
-
-	.main {
-		padding: 30px 0;
-	}
-
-	.footer {
-		display: flex;
-		flex-direction: column;
-		flex-wrap: wrap;
-		align-items: start;
-	}
-</style>
