--- a/src/components/organisms/Post.astro
+++ b/src/components/organisms/Post.astro
@@ -59,7 +59,7 @@ const date = post.publishedAt !== undefined ? post.publishedAt : post.createdAt;
 		text-decoration: underline;
 	}
 
-	.cms-content :global(pre > code) {
+	.cms-content :global(pre > code *) {
 		font-family: "Source Code Pro", monospace;
 	}
 </style>
