--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,6 +67,7 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 			}
 
 			.title-link {
+				display: table;
 				color: inherit;
 				text-decoration: none;
 			}
