--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,6 +36,7 @@ const posts = await getBlogs({ fields: ["id", "title", "tags", "publishedAt", "c
 	.post-list {
 		display: flex;
 		flex-direction: column;
+		align-items: start;
 	}
 
 	.post-wrap {
