--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,42 +49,91 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 		</noscript>
 		<!-- End Google Tag Manager (noscript) -->
 
-		<header class="header">
-			<a class="title-link" href="/"><h1 class="title">{serviceTitle}</h1></a>
+		<header>
+			<a id="title-link" href="/"><h1 id="title">{serviceTitle}</h1></a>
 		</header>
-		<main class="main">
-			<slot />
+		<main id="main">
+			<div id="content">
+				<slot />
+			</div>
+			<div id="ad">
+				<script
+					is:inline
+					async
+					src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6914867149724943"
+					crossorigin="anonymous"></script>
+				<!-- サイト横 -->
+				<ins
+					class="adsbygoogle"
+					style="display:block"
+					data-ad-client="ca-pub-6914867149724943"
+					data-ad-slot="5676319423"
+					data-ad-format="auto"
+					data-full-width-responsive="true"></ins>
+				<script is:inline>
+					// prettier-ignore
+					(adsbygoogle = window.adsbygoogle || []).push({});
+				</script>
+			</div>
 		</main>
-		<footer class="footer">
+		<footer>
 			<a href="https://twitter.com/Akime_Aki" target="_blank">Twitter</a>
 			<a href="https://www.youtube.com/channel/UCHV3Taosn76pn9_ip1u7Zkg" target="_blank">YouTube</a>
 			<AccessCounter />
 		</footer>
 		<img width="250" src="/face.png" alt="顔" />
+
+		<script
+			is:inline
+			async
+			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6914867149724943"
+			crossorigin="anonymous"></script>
+		<!-- フッター -->
+		<ins
+			class="adsbygoogle"
+			style="display:block"
+			data-ad-client="ca-pub-6914867149724943"
+			data-ad-slot="4538234242"
+			data-ad-format="auto"
+			data-full-width-responsive="true"></ins>
+		<script is:inline>
+			// prettier-ignore
+			(adsbygoogle = window.adsbygoogle || []).push({});
+		</script>
+
 		<style>
 			body {
 				padding: 5px;
 			}
 
-			.title-link {
+			#title-link {
 				display: table;
 				color: inherit;
 				text-decoration: none;
 			}
 
-			.title-link:hover {
+			#title-link:hover {
 				text-decoration: underline;
 			}
 
-			.title {
+			#title {
 				font-size: 32px;
 			}
 
-			.main {
+			#main {
+				display: flex;
 				padding: 30px 0;
 			}
 
-			.footer {
+			#content {
+				width: calc(100% - 300px);
+			}
+
+			#ad {
+				width: 300px;
+			}
+
+			footer {
 				display: flex;
 				flex-direction: column;
 				flex-wrap: wrap;
