--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -133,6 +133,16 @@ const pageTitle = title === undefined ? serviceTitle : `${title} | ${serviceTitl
 				width: 300px;
 			}
 
+			@media (max-width: 850px) {
+				#content {
+					width: 100%;
+				}
+
+				#ad {
+					display: none;
+				}
+			}
+
 			footer {
 				display: flex;
 				flex-direction: column;
