タブサイズ変更

--- a/src/components/organisms/Post.astro
+++ b/src/components/organisms/Post.astro
@@ -75,5 +75,7 @@ if (post.content !== undefined) {
 	.cms-content :global(pre > code),
 	.cms-content :global(pre > code *) {
 		font-family: "Source Code Pro", monospace;
+		tab-size: 4;
+		-moz-tab-size: 4;
 	}
 </style>
