--- a/src/components/organisms/Post.astro
+++ b/src/components/organisms/Post.astro
@@ -51,7 +51,7 @@ if (post.content !== undefined) {
 </div>
 <article class="cms-content">
 	<div set:html={content} />
-	<p class="comment-note">匿名でコメントできるます↓<br />（メアドはいるけど、適当でOK）</p>
+	<p class="comment-note">匿名でコメントできます↓<br />（メアドはいるけど、適当でOK）</p>
 </article>
 
 <style>
