--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -83,38 +83,67 @@ const posts = await getListContents<Blog>("blogs", { fields: ["id", "title", "ta
 			}
 
 			.post-tags {
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				transform: translate(-50%, -50%);
-				user-select: none;
-				pointer-events: none;
-				opacity: 0;
-				z-index: 1;
-				transition-duration: 500ms;
-				transition-property: opacity;
+				display: none;
 
-				.post-tag {
-					display: flex;
-					flex-direction: column;
-					align-items: center;
+				&[data-is-touch-device="false"] {
+					display: block;
 					position: absolute;
 					top: 50%;
 					left: 50%;
-					width: 50px;
-					height: 50px;
 					transform: translate(-50%, -50%);
+					user-select: none;
+					pointer-events: none;
+					opacity: 0;
+					z-index: 1;
 					transition-duration: 500ms;
-					transition-property: top, left;
-					transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
+					transition-property: opacity;
 
-					.post-tag-icon {
-						filter: drop-shadow(0 0 3px #424242);
+					.post-tag {
+						display: flex;
+						flex-direction: column;
+						align-items: center;
+						position: absolute;
+						top: 50%;
+						left: 50%;
+						width: 50px;
+						height: 50px;
+						transform: translate(-50%, -50%);
+						transition-duration: 500ms;
+						transition-property: top, left;
+						transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
+
+						.post-tag-icon {
+							filter: drop-shadow(0 0 3px #424242);
+						}
+
+						.post-tag-name {
+							filter: drop-shadow(0 0 3px white) drop-shadow(0 0 3px white) drop-shadow(0 0 3px white);
+							white-space: nowrap;
+						}
 					}
+				}
 
-					.post-tag-name {
-						filter: drop-shadow(0 0 3px white) drop-shadow(0 0 3px white) drop-shadow(0 0 3px white);
-						white-space: nowrap;
+				&[data-is-touch-device="true"] {
+					display: flex;
+					gap: 5px;
+					flex-wrap: wrap;
+					align-items: center;
+					padding-top: 10px;
+
+					.post-tag {
+						display: flex;
+						gap: 5px;
+						flex-wrap: wrap;
+						align-items: center;
+
+						.post-tag-icon {
+							width: 15px;
+						}
+
+						.post-tag-name {
+							color: #616161;
+							font-size: 10px;
+						}
 					}
 				}
 			}
